--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "up": "node webserver_2.js",
+    "down": "",
+    "clear": ""
+  },
   "dependencies": {
     "onoff": "^6.0.1"
   }
